updated order in server file, updated index view file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,8 +2,8 @@
 
 <ul>
     {{#each comments}}
-    <li><a href="/{{this.id}}">{{this.userComment}}</a> - <a href="edit/{{this.id}}">Edit</a></li>
+    <li>{{this.userComment}}</li>
     {{/each}}
 </ul>
 
-<a href="/new">New</a>
+<a href="/new">Add Your Perspective</a>
