--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,14 +7,20 @@
     <title>501 North Discussion</title>
     <link rel="shortcut icon" href="/img/Logo-16x16-01.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.js"
+    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   </head>
 
   <body>
 
     <main> 
         {{{body}}}
-    </main> 
+    </main>
 
+    <script src="script.js"></script>
   </body>
   
 </html>
