full crud capability

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,21 +2,10 @@
 
 <ul>
     {{#each comments}}
-        <li>{{ this.userComment }}</li>
+        <li>{{ this.userComment }} <a href="edit/{{this.id}}">Edit</a></li>
     {{/each}}
 </ul>
 
-<a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
-  <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
 
 <h2>Post Your Comment:</h2>
 
