--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
   <body>
 
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper grey lighten-2">
         <a href="#" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
       </div>
     </nav>
