--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,11 +12,14 @@
 
   <body>
 
-    <nav>
-      <div class="nav-wrapper grey lighten-2">
-        <a href="#" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
-      </div>
-    </nav>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper grey lighten-2">
+          <a href="#" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
+          <h3 class="right black-text">Before It Gets Any Worse, Let's Make It Better</h3>
+        </div>
+      </nav>
+    </div>
 
     <main> 
         {{{body}}}
