welcome screen document card added for mockup

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"/>
     <title>501 North Discussion</title>
     <link rel="shortcut icon" href="/img/Logo-16x16-01.png" type="image/png" sizes="16x16">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" href="/style.css">
   </head>
@@ -14,9 +15,11 @@
 
     <div class="navbar-fixed">
       <nav>
-        <div class="nav-wrapper grey lighten-2">
+        <div class="nav-wrapper white">
           <a href="#" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
-          <h3 class="right black-text">Before It Gets Any Worse, Let's Make It Better</h3>
+          <div class="valign-wrapper right">
+            <h4 class="black-text">Before It Gets Any Worse, Let's Make It Better</h4>
+          </div>
         </div>
       </nav>
     </div>
