--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,3 +1,35 @@
 <div id="welcome">
-
+    <div class="row">
+        <div class="col s6 m3">
+            <div class="card">
+                <div class="card-content">
+                    <span id="doc-title" class="card-title deep-orange-text text-accent-4">Documents</span>
+                    <div class="divider"></div>
+                    <div class="section">
+                        <i class="material-icons">file_copy</i> Council Agenda April 24, 2017</br>
+                        <i class="material-icons">file_copy</i> Town Report 2016</br>
+                        <i class="material-icons">file_copy</i> Police Contract</br>
+                        <i class="material-icons">file_copy</i> Public School Contract</br>
+                    </div>
+                        <strong>See All Documents</strong> 
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content">
+                    <span id="main-title" class="card-title">
+                        <i class="material-icons">folder_open</i>
+                         Documents
+                    </span>
+                    <div class="divider"></div>
+                    <i class="material-icons">file_copy</i> Council Agenda April 24, 2017</br>
+                    <i class="material-icons">file_copy</i> Town Report 2016</br>
+                    <i class="material-icons">file_copy</i> Police Contract</br>
+                    <i class="material-icons">file_copy</i> Public School Contract</br>
+                    <strong>See All Documents</strong> 
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
