--- a/public/style.css
+++ b/public/style.css
@@ -4,11 +4,13 @@ nav {
 
 .brand-logo > img {
     height: 7rem;
+    margin: 0 0 0 4rem;
     width: 7rem;
 }
 
-.nav-wrapper > h3 {
-    padding: 0 2rem 0 0;
+.nav-wrapper > .valign-wrapper {
+    height: 6rem;
+    padding: 0 4rem 0 0;
 }
 
 #welcome {
@@ -18,5 +20,10 @@ nav {
     height: 100vh;
     opacity: 0.5;
     overflow-y: hidden;
+    padding: 5rem 0 0 0;
     width: 100vw;
+}
+
+#doc-title > i {
+    vertical-align: bottom;
 }
