fixed routes to render to /comments, added route to welcome to page to get user to comments

--- a/views/edit-comment.hbs
+++ b/views/edit-comment.hbs
@@ -8,6 +8,6 @@
   <input type="submit" value="Update" />
 </form>
 
-<form action="/{{this.id}}?_method=delete" method="post">
+<form action="/comments/{{this.id}}?_method=delete" method="post">
   <input type="submit" value="Remove">
 </form>
