--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"/>
     <title>501 North Discussion</title>
-    <link rel="shortcut icon" href="/img/Logo-16x16-01.png" type="image/png" sizes="16x16">
+    <link rel="shortcut icon" href="/imgs/favicon.ico" type="image/png" sizes="16x16">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" href="/style.css">
@@ -14,15 +14,16 @@
   <body>
 
     <div class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper white">
+      <nav class="transparent z-depth-0">
+        <div class="nav-wrapper">
           <a href="#" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
           <div class="valign-wrapper right">
-            <h4 class="black-text">Before It Gets Any Worse, Let's Make It Better</h4>
+            <h4 class="black-text"></h4>
           </div>
         </div>
       </nav>
     </div>
+
 
     <main> 
         {{{body}}}
