--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,6 +1,9 @@
 <div id="welcome">
+    <div class="logo">
+        <div class="card transparent z-depth-5"></div>
+    </div>
     <div class="row">
-        <div class="col s6 m3">
+        <div class="col s12 m3">
             <div class="card">
                 <div class="card-content">
                     <span id="doc-title" class="card-title deep-orange-text text-accent-4">Documents</span>
@@ -15,19 +18,32 @@
                 </div>
             </div>
         </div>
-        <div class="col s12 m6">
-            <div class="card">
+        <div class="col s12 m6 push-m1">
+            <div class="card black">
                 <div class="card-content">
-                    <span id="main-title" class="card-title">
-                        <i class="material-icons">folder_open</i>
-                         Documents
-                    </span>
-                    <div class="divider"></div>
-                    <i class="material-icons">file_copy</i> Council Agenda April 24, 2017</br>
-                    <i class="material-icons">file_copy</i> Town Report 2016</br>
-                    <i class="material-icons">file_copy</i> Police Contract</br>
-                    <i class="material-icons">file_copy</i> Public School Contract</br>
-                    <strong>See All Documents</strong> 
+                    <h2 id="main-title" class="card-title center-align white-text">
+                        Before It Gets Any Worse, Let's Make It Better
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m6 push-m1">
+            <div id="discuss-card" class="card">
+                <div class="card-image">
+                    <img id="card-img" src="/imgs/501N-card-img.jpg" alt="Image of Traffic">
+                </div>
+                <div class="card-content">
+                    <p>
+                        The bursting open of a whole new economic development district in Lynchburg is underway and from the looks of things so far it's not getting the benefit of much long term planning.
+                    </p><br>
+                    <p>
+                        The 'North 501 Express District' is considered by many to be the most promising economic development opportunity that exists inside Lynchburg's city limits. If we cultivate this opportunity it will generate thousands of new jobs and attract new businesses,hotels, event space, retail outlets, upscale restaurants, boutique shops and more into our community. If we let it grow like a weed, we'll all have yet another weed to complain about.
+                    </p><br>
+                    <p>
+                        Let's get the infrastructure design for the North 501 Express District'right'. Let's give this huge economic development opportunity all the benefits of due process that make for quality results!
+                    </p>
+                    <a href="/comments">Please Join The Conversation</a>
+                    </div>
                 </div>
             </div>
         </div>
