--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,26 @@
-nav {
-    height: 7rem;
+.navbar-fixed {
+    position: fixed;
+    z-index: 9999999;
 }
 
 .brand-logo > img {
-    height: 7rem;
-    margin: 0 0 0 4rem;
-    width: 7rem;
-}
-
-.nav-wrapper > .valign-wrapper {
-    height: 6rem;
-    padding: 0 4rem 0 0;
+    padding: 1rem 0 0 1rem;
 }
 
 #welcome {
-    background: linear-gradient(to bottom, transparent, #fff), url('/imgs/501-traffic.jpg');
+    background: linear-gradient(to bottom, transparent, #fff 80%), url('/imgs/501-traffic.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    opacity: 0.5;
-    overflow-y: hidden;
-    padding: 5rem 0 0 0;
+    padding: 10rem 0 0 0;
     width: 100vw;
 }
 
 #doc-title > i {
     vertical-align: bottom;
+}
+
+#main-title {
+    font-weight: bold;
+    margin: 0;
 }
