--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,13 @@
 <ul>
     {{#each comments}}
-        <li>{{ this.userComment }} <a href="edit/{{this.id}}">Edit</a></li>
+        <li>{{ this.userComment }} <a href="/comments/edit/{{this.id}}">Edit</a></li>
     {{/each}}
 </ul>
 
 
 <h2>Post Your Comment:</h2>
 
-<form action="/" method="post" accept-charset="utf-8">
+<form action="/comments" method="post" accept-charset="utf-8">
     <p>
         <label>Share Your Thoughts:</label>
         <input type="text" value="" name="userComment" id="" />
