--- a/views/edit-comment.hbs
+++ b/views/edit-comment.hbs
@@ -1,6 +1,6 @@
 <h2>Edit Your Comment:</h2>
 
-<form action="/{{this.id}}?_method=put" method="post">
+<form action="/comments/{{this.id}}?_method=put" method="post">
   <p>
     <label>Comment:</label>
     <input type="text" value="{{this.userComment}}" name="userComment"/>
