--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,17 +13,11 @@
 
   <body>
 
-    <div class="navbar-fixed">
-      <nav class="transparent z-depth-0">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
-          <div class="valign-wrapper right">
-            <h4 class="black-text"></h4>
-          </div>
+      <nav class="navbar-fixed">
+        <div class="nav-wrapper white">
+          <a href="/" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
         </div>
       </nav>
-    </div>
-
 
     <main> 
         {{{body}}}
