--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,19 @@
-<ul>
-    {{#each comments}}
-        <li>{{ this.userComment }} <a href="/comments/edit/{{this.id}}">Edit</a></li>
-    {{/each}}
-</ul>
 
+<div class="row">
+    {{#each comments}}
+        <div class="col s12">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                <span class="card-title">Comment:</span>
+                    <li>{{ this.userComment }}</li>
+                </div>
+                <div class="card-action">
+                    <a href="/comments/edit/{{this.id}}">Edit</a>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+</div>
 
 <h2>Post Your Comment:</h2>
 
