--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,7 +1,4 @@
 <div id="welcome">
-    <div class="logo">
-        <div class="card transparent z-depth-5"></div>
-    </div>
     <div class="row">
         <div class="col s12 m3">
             <div class="card">
@@ -42,7 +39,9 @@
                     <p>
                         Let's get the infrastructure design for the North 501 Express District'right'. Let's give this huge economic development opportunity all the benefits of due process that make for quality results!
                     </p>
-                    <a href="/comments">Please Join The Conversation</a>
+                    <div class="section">
+                        <a class="right" href="/comments">Please Join The Conversation</a>
+                    </div>
                     </div>
                 </div>
             </div>
