--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -15,23 +15,15 @@
                 </div>
             </div>
         </div>
-        <div class="col s12 m6 push-m1">
-            <div class="card black">
-                <div class="card-content">
-                    <h2 id="main-title" class="card-title center-align white-text">
-                        Before It Gets Any Worse, Let's Make It Better
-                    </h2>
-                </div>
-            </div>
-        </div>
+
         <div class="col s12 m6 push-m1">
             <div id="discuss-card" class="card">
-                <div class="card-image">
-                    <img id="card-img" src="/imgs/501N-card-img.jpg" alt="Image of Traffic">
-                </div>
                 <div class="card-content">
                     <p>
                         The bursting open of a whole new economic development district in Lynchburg is underway and from the looks of things so far it's not getting the benefit of much long term planning.
+                    </p><br>
+                    <p>
+                        Quality economic development begins on a foundation of carefully planned and vetted infrastructure. Our view is that road designs, like the ones that we have learned were recently presented to VDOT for changes to the north end Lynchburg Expressway in the vicinity of the Fresh Market, deserve the same process of review through the Planning Commission, public forums and City Council as those projects proposed by private developers. Maybe even more so considering their long term impact.
                     </p><br>
                     <p>
                         The 'North 501 Express District' is considered by many to be the most promising economic development opportunity that exists inside Lynchburg's city limits. If we cultivate this opportunity it will generate thousands of new jobs and attract new businesses,hotels, event space, retail outlets, upscale restaurants, boutique shops and more into our community. If we let it grow like a weed, we'll all have yet another weed to complain about.
