--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,10 @@
     height: 7.25rem;
 }
 
+.nav-wrapper {
+    padding: 0 3rem;
+}
+
 .brand-logo > img {
     padding: 0.25rem 0 0 1rem;
 }
@@ -10,7 +14,7 @@
     background: linear-gradient(to bottom, transparent, #fff 80%), url('/imgs/501-traffic.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
 }
 
@@ -18,7 +22,6 @@
     vertical-align: bottom;
 }
 
-#main-title {
-    font-weight: bold;
+figure {
     margin: 0;
 }
