--- a/views/edit-comment.hbs
+++ b/views/edit-comment.hbs
@@ -1,13 +1,20 @@
-<h2>Edit Your Comment:</h2>
-
-<form action="/comments/{{this.id}}?_method=put" method="post">
-  <p>
-    <label>Comment:</label>
-    <input type="text" value="{{this.userComment}}" name="userComment"/>
-  </p>
-  <input class="waves-effect deep-orange accent-2 btn" type="submit" value="Update" />
-</form>
-
-<form action="/comments/{{this.id}}?_method=delete" method="post">
-  <input class="waves-effect deep-orange accent-2 btn" type="submit" value="Remove">
-</form>
+<div class="row">
+  <div class="col s12 m7">
+    <div class="card">
+      <div class="card-content">
+          <h2>Edit Your Comment:</h2>
+          <form action="/comments/{{this.id}}?_method=put" method="post">
+            <p>
+              <label>Comment:</label>
+              <input type="text" value="{{this.userComment}}" name="userComment"/>
+            </p>
+            <div class="card-action">
+              <input class="waves-effect deep-orange accent-2 btn" type="submit" value="Update" />
+              <form action="/comments/{{this.id}}?_method=delete" method="post">
+                <input class="waves-effect deep-orange accent-2 btn" type="submit" value="Remove">
+              </form>
+            </div>
+          </form>
+      </div>
+  </div>
+</div>
