--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -3,15 +3,15 @@
         <div class="col s12 m3">
             <div class="card">
                 <div class="card-content">
-                    <span id="doc-title" class="card-title deep-orange-text text-accent-4">Documents</span>
+                    <span class="card-title">Documents</span>
                     <div class="divider"></div>
                     <div class="section">
-                        <i class="material-icons">file_copy</i> Council Agenda April 24, 2017</br>
-                        <i class="material-icons">file_copy</i> Town Report 2016</br>
-                        <i class="material-icons">file_copy</i> Police Contract</br>
-                        <i class="material-icons">file_copy</i> Public School Contract</br>
+                        <i id="icons" class="material-icons">file_copy</i> Council Agenda April 24, 2017</br>
+                        <i id="icons" class="material-icons">file_copy</i> Town Report 2016</br>
+                        <i id="icons" class="material-icons">file_copy</i> Police Contract</br>
+                        <i id="icons" class="material-icons">file_copy</i> Public School Contract</br>
                     </div>
-                        <strong>See All Documents</strong> 
+                        <strong class="deep-orange-text text-accent-2">See All Documents</strong> 
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
                         Let's get the infrastructure design for the North 501 Express District'right'. Let's give this huge economic development opportunity all the benefits of due process that make for quality results!
                     </p>
                     <div class="section">
-                        <a class="right" href="/comments">Please Join The Conversation</a>
+                        <a class="deep-orange-text text-accent-2 right" href="/comments">Please Join The Conversation</a>
                     </div>
                     </div>
                 </div>
