--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -17,14 +17,9 @@
         </div>
 
         <div class="col s12 m6 push-m2">
-            <div id="discuss-card" class="card">
+            <div class="card">
                 <div class="card-content">
-                    <p>
-                        The bursting open of a whole new economic development district in Lynchburg is underway and from the looks of things so far it's not getting the benefit of much long term planning.
-                    </p><br>
-                    <p>
-                        Quality economic development begins on a foundation of carefully planned and vetted infrastructure. Our view is that road designs, like the ones that we have learned were recently presented to VDOT for changes to the north end Lynchburg Expressway in the vicinity of the Fresh Market, deserve the same process of review through the Planning Commission, public forums and City Council as those projects proposed by private developers. Maybe even more so considering their long term impact.
-                    </p><br>
+                    <span class="card-title"><strong>Before It Gets Any Worse, Let's Make It Better</strong></span>
                     <p>
                         The 'North 501 Express District' is considered by many to be the most promising economic development opportunity that exists inside Lynchburg's city limits. If we cultivate this opportunity it will generate thousands of new jobs and attract new businesses,hotels, event space, retail outlets, upscale restaurants, boutique shops and more into our community. If we let it grow like a weed, we'll all have yet another weed to complain about.
                     </p><br>
@@ -32,7 +27,7 @@
                         Let's get the infrastructure design for the North 501 Express District'right'. Let's give this huge economic development opportunity all the benefits of due process that make for quality results!
                     </p>
                     <div class="section">
-                        <a class="deep-orange-text text-accent-2 right" href="/comments">Please Join The Conversation</a>
+                        <a id="welcome-button" class="waves-effect deep-orange accent-2 btn right" href="/comments">Please Join The Conversation</a><br>
                     </div>
                     </div>
                 </div>
