--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,12 +13,13 @@
 
   <body>
 
-    <nav class="navbar-fixed">
-      <div class="nav-wrapper black">
-        <a href="/" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
-        <h3 class="right white-text">Before It Gets Any Worse, Let's Make It Better</h3>
-      </div>
-    </nav>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper black">
+          <a href="/" class="brand-logo"><img src="/imgs/501North.png" alt="Logo for Project"></a>
+        </div>
+      </nav>
+    </div>
 
     <main> 
         {{{body}}}
