funcitonal CRUD app with mongoDB

--- a/views/edit-comment.hbs
+++ b/views/edit-comment.hbs
@@ -6,7 +6,7 @@
           <form action="/comments/{{this.id}}?_method=put" method="post">
             <p>
               <label>Comment:</label>
-              <input class="edit-input" type="text" value="{{this.user_comment}}" name="user_comment"/>
+              <input class="edit-input" type="text" value="{{this.userComment}}" name="userComment"/>
             </p>
             <div id="edit-action" class="card-action">
               <input class="waves-effect deep-orange accent-2 btn" type="submit" value="Update" />
